k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: churn
  template:
    metadata:
      labels:
        app: churn
    spec:
      containers:
      - name: churn
        image: churn-mlops:v1
        imagePullPolicy: Never
