k8s/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-canary
spec:
  selector:
    app: churn
  ports:
  - port: 80
    targetPort: 8000
