k8s/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-stable
spec:
  selector:
    app: churn
  ports:
  - port: 80
    targetPort: 8000
