k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-service
spec:
  type: NodePort
  selector:
    app: churn
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
